# glew-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  GeneratePkgConfig.cmake  README.md  azure-pipelines.yml  maintain.sh
.github/workflows/: cmake.yml  nightly.yml  shellcheck.yml
auto/doc/: index.html  log.html
auto/src/: glew_head.c  glew_head.h
doc/: advanced.html  basic.html  build.html  credits.html  glew.html  glxew.html  index.html  install.html  log.html  wglew.html
glew-cmake/: Dockerfile  cmake-install-test.cmake  fetch-content.cmake  maintain.sh  mingw.cmake  pipeline.yml  sub-directory-test.cmake  update-pipeline.sh
include/GL/: eglew.h  glew.h  glxew.h  wglew.h
src/: glew.c  glewinfo.c
